<resources>
    <string name="app_name">MyGuard</string>
    <string name="default_notification_channel_id">ru.rubeg38.myguard.notifications</string>

    <!-- Common -->
    <string name="background_image_description">Background image</string>
    <string name="request_failed_message">Could not load data</string> <!-- TODO: Edit -->
    <string name="call_button_title">Call the guard service</string>
    <string name="phone_number_not_found_message">Phone number is not found</string>
    <string name="permission_required_title">Permission required</string>
    <string name="permission_required_message">The application requires notifications permission</string>
    <string name="grant_permission_button_text">Grant permission</string>
    <string name="refuse_permission_button_text">Cancel</string>
    <string name="notifications_permission_not_granted_message">Permission not granted. You will not receive notifications</string>

    <!-- Login -->
    <string name="logo_image_description">Logo</string>
    <string name="logo_text">Rubezh NPO</string>
    <string name="slogan">Your defence</string>
    <string name="city_picker_hint">City</string>
    <string name="guard_service_picker_hint">Guard service</string>
    <string name="phone_number_field_hint">Phone number</string>
    <string name="get_password_button_text">Get password</string>
    <string name="enter">Login</string>

    <!-- Password -->
    <string name="password_sent_text">An SMS message with a security code has been sent to you</string>
    <string name="password_hint">Enter code</string>
    <string name="password_request_cooldown_text">You can request new password again after: %s</string>
    <string name="get_new_password_button_text">Get new password</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="proceed_button_text">Proceed</string>
    <string name="fcm_token_unavailable_message">Google Services is not available</string> <!-- TODO: Edit -->
    <string name="password_request_failed_message">Could not send new password</string> <!-- TODO: Edit -->
    <string name="login_failed_message">Login failed</string> <!-- TODO: Edit -->

    <!-- Passcode -->
    <string name="exit_button_title">Exit</string>
    <string name="forgot_code_button_text">Forgot code?</string>
    <string name="digit_2_button_hint">abc</string>
    <string name="digit_3_button_hint">def</string>
    <string name="digit_4_button_hint">ghi</string>
    <string name="digit_5_button_hint">jkl</string>
    <string name="digit_6_button_hint">mno</string>
    <string name="digit_7_button_hint">pqrs</string>
    <string name="digit_8_button_hint">tuv</string>
    <string name="digit_9_button_hint">wxyz</string>
    <string name="digit_0_button_hint">+</string>
    <string name="passcode_creation_hint_text">Come up with a pincode</string>
    <string name="passcode_confirmation_hint_text">Repeat the pincode</string>
    <string name="entrance_with_passcode_hint_text">Enter the pincode</string>
    <string name="wrong_passcode_confirmation_message">Wrong passcode confirmation</string>
    <string name="wrong_passcode_message">Wrong passcode</string>
    <string name="logout_failed_message">Could not log out. Please, try again</string>
    <string name="biometric_auth_failed_message">Authentication failed</string>
    <string name="biometric_prompt_title">Biometric Authentication</string>

    <!-- Facilities -->
    <string name="facilities_title">Facilities</string>
    <string name="facilities_update_failed_message">Could not fetch the list of facilities</string>
    <string name="sort_button_title">Sort facilities</string>

    <!-- Sorting -->
    <string name="sorting_bottom_sheet_title">Sorting</string>
    <string name="sorting_by_address_title">By address</string>
    <string name="sorting_by_name_title">By name</string>
    <string name="sorting_by_status_title">By status</string>
    <string name="ascending_subtitle">Ascending</string>
    <string name="descending_subtitle">Descending</string>

    <!-- Facility -->
    <string name="edit_name_item_text">Edit name</string>
    <string name="application_item_text">Send application</string>
    <string name="events_item_text">Events</string>
    <string name="sensors_item_text">Sensors</string>
    <string name="account_item_text">Account</string>
    <string name="test_mode_item_text">Test mode</string>
    <string name="alarm_button_content_description">Alarm button</string>
    <string name="arming_button_content_description">Arming button</string>
    <string name="rename_dialog_title">Rename the facility</string>
    <string name="name_hint">Name</string>
    <string name="rename_dialog_positive_button_text">Rename</string>
    <string name="rename_dialog_negative_button_text">Cancel</string>
    <string name="renaming_failed_message">Could not rename the facility</string>
    <string name="confirmation_dialog_title">Confirmation required</string>
    <string name="confirmation_dialog_negative_button_text">Cancel</string>
    <string name="alarm_is_not_available_message">The alarm feature is not available. In order to use this feature, contact your security company</string>
    <string name="alarm_dialog_message">Are you sure you want to start alarm?</string>
    <string name="alarm_dialog_positive_button_text">Start alarm</string>
    <string name="alarm_failed_message">Could not start alarm</string>
    <string name="cancel_alarm_dialog_title">Cancel the alarm</string>
    <string name="cancel_alarm_dialog_message">Select your passcode from the list below</string>
    <string name="cancel_alarm_dialog_positive_button_text">Cancel the alarm</string>
    <string name="cancel_alarm_dialog_negative_button_text">Go back</string>
    <string name="cancel_alarm_failed_message">Could not cancel alarm</string>
    <string name="cancel_alarm_passcode_not_found_message">Could not find the passcode to cancel the alarm</string>
    <string name="cancel_alarm_cooldown_message">You have already tried to cancel the alarm less then an hour ago</string>
    <string name="arming_is_not_available_message">The arming/disarming feature is not available. In order to use this feature, contact your security company</string>
    <string name="arming_dialog_message">Are you sure you want to arm the facility?</string>
    <string name="arming_dialog_positive_button_text">Arm the facility</string>
    <string name="arming_progress_bar_hint">Arming…</string>
    <string name="arming_failed_message">Could not arm the facility</string>
    <string name="arming_failed_not_ready_message">Could not arm the facility cause not ready</string>
    <string name="arming_failed_block_message">Could not arm the facility cause its block</string>
    <string name="arming_perimeter_dialog_message">Are you sure you want to arm the facility\'s perimeter?</string>
    <string name="arming_perimeter_dialog_positive_button_text">Arm the facility\'s perimeter</string>
    <string name="arming_perimeter_progress_bar_hint">Arming perimeter…</string>
    <string name="arming_perimeter_failed_message">Could not arm the facility\'s perimeter</string>
    <string name="disarming_dialog_message">Are you sure you want to disarm the facility?</string>
    <string name="disarming_dialog_positive_button_text">Disarm the facility</string>
    <string name="disarming_progress_bar_hint">Disarming…</string>
    <string name="disarming_failed_message">Could not disarm the facility</string>

    <string-array name="passcodes">
        <item>человек</item>
        <item>время</item>
        <item>жизнь</item>
        <item>работа</item>
        <item>система</item>
        <item>земля</item>
        <item>машина</item>
        <item>компания</item>
        <item>развитие</item>
        <item>процесс</item>
        <item>средство</item>
        <item>условие</item>
        <item>минута</item>
        <item>организация</item>
        <item>внимание</item>
        <item>информация</item>
        <item>движение</item>
        <item>культура</item>
        <item>принцип</item>
        <item>характер</item>
        <item>территория</item>
        <item>свобода</item>
        <item>природа</item>
        <item>писатель</item>
        <item>спектакль</item>
        <item>основание</item>
        <item>надежда</item>
        <item>пространство</item>
        <item>сознание</item>
        <item>художник</item>
        <item>безопасность</item>
    </string-array>

    <!-- Events -->
    <string name="events_update_failed_message">Could not fetch the list of events</string>

    <!-- Sensors -->
    <string name="temperature_text">%.1f°C</string>

    <!-- Accounts -->
    <string name="account_text_field_hint">Account</string>
    <string name="sum_text_field_hint">Sum</string>
    <string name="pay_button_text">Pay</string>
    <string name="invalid_input_message">Invalid data format</string>
    <string name="payment_page_title">Payment</string>
    <string name="no_accounts_message">No data</string>

    <!-- TestMode -->
    <string name="reset_button_text">Reset</string>
    <string name="end_testing_button_text">Cancel</string>
    <string name="press_alarm_button_hint">Press the alarm button</string>
    <string name="alarm_button_pressed_hint">The alarm button has been pressed</string>
    <string name="alarm_button_tested_hint">The alarm button has been tested</string>
    <string name="reset_failed_message">Could not complete reset</string>
    <string name="end_testing_failed_message">Could not end the testing</string>
    <string name="testing_failed_message">Could not start testing</string>

    <!-- Applications -->
    <string name="application_screen_title">Application</string>
    <string name="application_text_field_hint">Application</string>
    <string name="custom_application_text">Custom application</string>
    <string name="custom_application_text_field_hint">Application text</string>
    <string name="date_text_field_hint">Date</string>
    <string name="time_text_field_hint">Time</string>
    <string name="applications_request_failed_message">Could not fetch the applications</string>
    <string name="missing_datetime_error_message">Incorrect data</string>
    <string name="application_failed_message">Could not make an application</string>
    <string name="loginHint">Enter your details in the fields below to login</string>
    <string name="clear_button">clear_button</string>
    <string name="detail">Detail</string>
    <string name="start_alarm">Start Alarm</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="arm_guarded">Arm</string>
    <string name="arm_not_guarded">Disarm</string>

</resources>