<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/screenBackgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:layout_marginStart="16dp"
            android:text="@string/enter"
            android:textSize="39sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- City -->
        <TextView
            android:id="@+id/loginHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:hint="@string/loginHint"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <View
            android:id="@+id/cityPickerBackgroundView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginTop="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/loginHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/LightSpinnerTheme"
            />

        <Spinner
            android:id="@+id/cityPicker"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginHorizontal="0dp"
            app:layout_constraintTop_toTopOf="@id/cityPickerBackgroundView"
            app:layout_constraintStart_toStartOf="@id/cityPickerBackgroundView"
            app:layout_constraintEnd_toEndOf="@id/cityPickerBackgroundView"
            app:layout_constraintBottom_toBottomOf="@id/cityPickerBackgroundView"
            android:paddingHorizontal="@dimen/window_padding"
            style="@style/LightSpinnerTheme"
            />

        <!-- Guard service -->
        <View
            android:id="@+id/guardServicePickerBackgroundView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/cityPickerBackgroundView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/LightSpinnerTheme"/>

        <Spinner
            android:id="@+id/guardServicePicker"
            style="@style/LightSpinnerTheme"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_field_height"
            android:paddingHorizontal="@dimen/window_padding"
            app:layout_constraintBottom_toBottomOf="@id/guardServicePickerBackgroundView"
            app:layout_constraintEnd_toEndOf="@id/guardServicePickerBackgroundView"
            app:layout_constraintStart_toStartOf="@id/guardServicePickerBackgroundView"
            app:layout_constraintTop_toTopOf="@id/guardServicePickerBackgroundView" />

        <!-- Phone number -->
        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:hint="@string/phone_number_field_hint"
            android:inputType="phone"
            android:paddingHorizontal="16dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guardServicePickerBackgroundView" />

        <!-- Submit -->

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/clear_button_bg"
            app:layout_constraintBottom_toBottomOf="@+id/phoneEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/phoneEditText"
            app:layout_constraintTop_toTopOf="@+id/phoneEditText"
            android:contentDescription="@string/clear_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="98dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:backgroundTint="#007AFF"
            android:text="@string/get_password_button_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>